fixed checkbox alignment on form, made Story use Post, added location, age etc to Post

--- a/components/CovidForm/CovidForm.module.scss
+++ b/components/CovidForm/CovidForm.module.scss
@@ -109,6 +109,13 @@
   }
 }
 
+.covidForm__outsideAustralia {
+  @include media-md {
+    float: left;
+    width: 100%;
+  }
+}
+
 .covidForm__outsideAustraliaLabel {
   display: inline;
   margin-left: var(--spacing-lg);
